--- a/.gitignore
+++ b/.gitignore
@@ -187,3 +187,4 @@ com_crashlytics_export_strings.xml
 crashlytics.properties
 crashlytics-build.properties
 fabric.properties
+Progress Pics/Oct25.png
